test/functional/failtests/lambdas/assign.void.txt
TypeError: Inferred type does not expect a return value from lambda function
4 |     func<>:x = foo;
5 |     x = (): 123;
  |         ^ (5:9)
6 | }

